[gd_scene load_steps=9 format=3 uid="uid://dh73lhl8ke6mn"]

[ext_resource type="PackedScene" uid="uid://njx823gyk04n" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_hand.tscn" id="1_cxedf"]
[ext_resource type="Script" path="res://Scripts/Hand.gd" id="1_esba0"]
[ext_resource type="PackedScene" uid="uid://raeeicvvindd" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_hand.tscn" id="2_rqfxi"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="3_ffwpp"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="4_vh803"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="5_t6wot"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dp8ug"]
radius = 0.015

[sub_resource type="BoxShape3D" id="BoxShape3D_ngohn"]
size = Vector3(0.075, 0.15, 0.2)

[node name="XRRig" type="XROrigin3D"]

[node name="XRCamera3D" type="XRCamera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="LeftHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"
script = ExtResource("1_esba0")

[node name="LeftHand" parent="LeftHand" instance=ExtResource("1_cxedf")]

[node name="MovementDirect" parent="LeftHand" instance=ExtResource("3_ffwpp")]
max_speed = 2.0
strafe = true

[node name="FingerHitbox" type="AnimatableBody3D" parent="LeftHand"]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.015, 0)
collision_layer = 2
collision_mask = 6
sync_to_physics = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftHand/FingerHitbox"]
shape = SubResource("SphereShape3D_dp8ug")

[node name="HandHitbox" type="AnimatableBody3D" parent="LeftHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0191629, -0.0411459, 0.0804193)
collision_layer = 2
collision_mask = 6
sync_to_physics = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftHand/HandHitbox"]
shape = SubResource("BoxShape3D_ngohn")

[node name="RightHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"
script = ExtResource("1_esba0")

[node name="RightHand" parent="RightHand" instance=ExtResource("2_rqfxi")]

[node name="MovementTurn" parent="RightHand" instance=ExtResource("4_vh803")]

[node name="FingerHitbox" type="AnimatableBody3D" parent="RightHand"]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.015, 0)
collision_layer = 2
collision_mask = 6
sync_to_physics = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightHand/FingerHitbox"]
shape = SubResource("SphereShape3D_dp8ug")

[node name="HandHitbox" type="AnimatableBody3D" parent="RightHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0173337, -0.0411459, 0.0804193)
collision_layer = 2
collision_mask = 6
sync_to_physics = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightHand/HandHitbox"]
shape = SubResource("BoxShape3D_ngohn")

[node name="PlayerBody" parent="." instance=ExtResource("5_t6wot")]
collision_layer = 524289
collision_mask = 5

[connection signal="button_pressed" from="LeftHand" to="LeftHand" method="_on_button_pressed"]
[connection signal="button_released" from="LeftHand" to="LeftHand" method="_on_button_released"]
[connection signal="button_pressed" from="RightHand" to="RightHand" method="_on_button_pressed"]
[connection signal="button_released" from="RightHand" to="RightHand" method="_on_button_released"]
